--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,65 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyCharm
+.idea/
+
+# Virtual Environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# Environment variables
+.env
+
+# Logs
+*.log
+log/
+logs/
+python_server_log.txt
+http_server_log.txt
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Excel test files
+test_report.xlsx
+zero_grade_report.xlsx
+consolidated_report.xlsx
+
 # Node.js
 node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
-.env
+
+# Editor folders and files
+.vscode/
+*.swp
+*~
+.DS_Store
 
 # Build files
 /dist
